--- a/KinectingPepper/KinectingPepper.csproj
+++ b/KinectingPepper/KinectingPepper.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Business\KinectHelper.cs" />
     <Compile Include="Business\BodyHelper.cs" />
     <Compile Include="Enums\ECameraTypes.cs" />
+    <Compile Include="MediaSink\MediaSink.cs" />
     <Compile Include="Models\BodyDrawing.cs" />
     <Compile Include="UI\BodyViewer.xaml.cs">
       <DependentUpon>BodyViewer.xaml</DependentUpon>
@@ -117,8 +118,9 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Extensions\" />
+    <Content Include="Extensions\RGB_SinkWriter_CLI.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
