--- a/KinectingPepper/KinectingPepper.csproj
+++ b/KinectingPepper/KinectingPepper.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Enums\ECameraTypes.cs" />
     <Compile Include="Models\BodyDrawing.cs" />
     <Compile Include="Models\BodyFrameWrapper.cs" />
+    <Compile Include="Models\JointRow.cs" />
     <Compile Include="Models\JointWrapper.cs" />
     <Compile Include="Models\BodyWrapper.cs" />
     <Compile Include="UI\BodyViewer.xaml.cs">
