Added simple logging on UI

--- a/KinectingPepper/KinectingPepper.csproj
+++ b/KinectingPepper/KinectingPepper.csproj
@@ -97,6 +97,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Business\FrameParser.cs" />
+    <Compile Include="Business\Logger.cs" />
     <Compile Include="Business\PersistFrames.cs" />
     <Compile Include="Business\KinectHelper.cs" />
     <Compile Include="Business\BodyHelper.cs" />
