A Whole new approach via downsampling. It will now create 2 640*480 files RGB+Depth. Removed JointViewer/Saver because of a build error in these files.

--- a/KinectingPepper/KinectingPepper.csproj
+++ b/KinectingPepper/KinectingPepper.csproj
@@ -103,10 +103,6 @@
     <Compile Include="Business\PathNameGenerator.cs" />
     <Compile Include="Enums\ECameraTypes.cs" />
     <Compile Include="MediaSink\MediaSink.cs" />
-    <Compile Include="Models\BodyDrawing.cs" />
-    <Compile Include="Models\BodyFrameWrapper.cs" />
-    <Compile Include="Models\JointWrapper.cs" />
-    <Compile Include="Models\BodyWrapper.cs" />
     <Compile Include="UI\BodyViewer.xaml.cs">
       <DependentUpon>BodyViewer.xaml</DependentUpon>
     </Compile>
@@ -181,6 +177,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Extensions\" />
+    <Folder Include="Models\" />
     <Folder Include="Serialization\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
