X1.1.1 save joints csv (#9)
* Basic class and added csvHelper package

* First implementation of body serialization (untested)

* Adding tuple and csv module

* Added simple check, only safe file when recordedframe exists

* Made serialization of joints and timespan working

* Added writing to csv, jointrow model for csv

* Added datetime now to csv file

* removed a } and formatting

* Removed unused import & commented code & cleaned files

* Working now with a nice ToString method

* Removed unnecesary action to XML

* Removed because it was already done

--- a/KinectingPepper/KinectingPepper.csproj
+++ b/KinectingPepper/KinectingPepper.csproj
@@ -71,6 +71,10 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CsvHelper, Version=2.0.0.0, Culture=neutral, PublicKeyToken=8c4959082be5c823, processorArchitecture=MSIL">
+      <HintPath>..\packages\CsvHelper.2.16.3.0\lib\net45\CsvHelper.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.Kinect, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\..\..\Program Files\Microsoft SDKs\Kinect\v2.0_1409\Assemblies\Microsoft.Kinect.dll</HintPath>
@@ -96,6 +100,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Business\CSV_saver.cs" />
     <Compile Include="Business\FrameParser.cs" />
     <Compile Include="Business\Logger.cs" />
     <Compile Include="Business\PersistFrames.cs" />
@@ -106,6 +111,7 @@
     <Compile Include="MediaSink\MediaSink.cs" />
     <Compile Include="Models\BodyDrawing.cs" />
     <Compile Include="Models\BodyFrameWrapper.cs" />
+    <Compile Include="Models\JointRow.cs" />
     <Compile Include="Models\JointWrapper.cs" />
     <Compile Include="Models\BodyWrapper.cs" />
     <Compile Include="UI\BodyViewer.xaml.cs">
@@ -160,6 +166,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
