--- a/SinkWrtier CLI/SinkWrtier CLI.vcxproj
+++ b/SinkWrtier CLI/SinkWrtier CLI.vcxproj
@@ -49,7 +49,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v140</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
@@ -81,11 +81,11 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <OutDir>$(SolutionDir)\KinectingPepper\bin\x64\Debug</OutDir>
-    <TargetName>Depth_SinkWriter_CLI</TargetName>
+    <TargetName>SinkWriter_CLI</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <OutDir>C:\Users\Thijs\Source\Repos\KinectingPepper\KinectingPepper\Extensions\x64</OutDir>
-    <TargetName>RGB_SinkWriter_CLI</TargetName>
+    <TargetName>SinkWriter_CLI</TargetName>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -127,10 +127,6 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClInclude Include="Sink.h" />
-    <ClInclude Include="SinkWrapper.h" />
-  </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Sink.cpp" />
   </ItemGroup>
