--- a/KinectingPepper/App.config
+++ b/KinectingPepper/App.config
@@ -1,6 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Kinect_ing_Pepper.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup useLegacyV2RuntimeActivationPolicy="true"> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
     </startup>
+    <userSettings>
+        <Kinect_ing_Pepper.Properties.Settings>
+            <setting name="PersonNumber" serializeAs="String">
+                <value>60</value>
+            </setting>
+        </Kinect_ing_Pepper.Properties.Settings>
+    </userSettings>
 </configuration>
