Application remembers last path selected when select file to playback

--- a/KinectingPepper/App.config
+++ b/KinectingPepper/App.config
@@ -13,6 +13,9 @@
             <setting name="PersonNumber" serializeAs="String">
                 <value>60</value>
             </setting>
+            <setting name="LastPlaybackPath" serializeAs="String">
+                <value>C:\images\Pepper</value>
+            </setting>
         </Kinect_ing_Pepper.Properties.Settings>
     </userSettings>
 </configuration>
