--- a/KinectingPepper/packages.config
+++ b/KinectingPepper/packages.config
@@ -4,4 +4,5 @@
   <package id="Accord.Video" version="3.8.0" targetFramework="net461" />
   <package id="Accord.Video.FFMPEG" version="3.8.0" targetFramework="net461" />
   <package id="CsvHelper" version="6.0.0" targetFramework="net461" />
+  <package id="Microsoft.Kinect" version="2.0.1410.19000" targetFramework="net461" />
 </packages>
